10. Add option to increase size of check/radios - default is now 15pixels.
11. Really fix Qt only compile.
12. Increase default shadow sizes.
13. If using gtk style combos and bordering menu items, increase frame width by
    1 pixel.
14. Remove border from preview colour square in KDE colour selection dialog.
15. Only offset vertical position of etch text.

1.1.1
-----
1. Alter alpha settings of square rings.
2. Fix Qt only compile.
3. Fix painting of MDI titlebar texts.
4. Fix right border of MDI windows when rounded.

1.1.0
-----
 1. Add option to not embolden progressbar text.
 2. Add option to allow coloured mouse over for toolbar buttons.
 3. Add option to border selection.
 4. Add option to draw square rings on background.
 5. Under KDE SC >= 4.3, use alpha blending for window borders.
 6. Implement coloured shadows - code taken from Oxygen window decoration
    (but slightly modified)
 7. Add support for window grouping with KDE SC >= 4.4.
 8. In Arora, if using thin scrollbar grooves, fill background of scrolbars
    in 'WebView' with standard background colour.
 9. When drawing focus, attempt to determine if this is in a KpageListView.
10. Increase tabbar tab size so as to allow more space around icons.
11. Fix clipping issues when drawing combos with a coloured area under arrow
    (sometimes arrows would not be redrawn).
12. Use standard application font for combos and line-edits that are in toolbars.
13. Use KIcon("dialog-close") as tab-close icon.
14. When drawing frames - if frame size = window size, then dont round.
15. Add option to align tab text in the centre.
16. Dont fade tabbar base on KDevelop's tabbbar that is in the menubar - KDevelop
    itself is doing fading.
17. If not using standard buttons for sidebar buttons, make KDevelop's appear
    more kate-like.

1.0.2
-----
 1. Apply cygwin patches from Yaakov S - use MODULE istead of SHARED.
 2. For OpenOffice.org, if menuitem style is set to fade, then use flat.